# todo

./: README.md  pyproject.toml
tests/: test_todo.py
todo/: __init__.py  __main__.py  cli.py  config.py  database.py  todo.py
