[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["Yuri Silveira <ypereirars@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
colorama = "^0.4.6"
shellingham = "^1.5.3"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[flake8]
max-line-length = 120